--- a/hex/hex.html
+++ b/hex/hex.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Color Flipper</title>
-    <link rel="stylesheet" href="/main/style.css">
+    <link rel="stylesheet" href="./hex.css">
 </head>
 
 <body>
